--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,24 +9,16 @@
   },
   "extends": [
     "eslint:recommended",
-    "plugin:react/recommended"
+    "react-app"
   ],
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  },
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
   "parserOptions": {
-    "ecmaVersion": 2020,
-    "sourceType": "module"
+    "ecmaVersion": 2020
   },
   "rules": {
-    "react/react-in-jsx-scope": "off",
-    "react/no-unescaped-entities": 0,
     "indent": [
       "error",
       2
